# device_hisilicon_hispark_aries

./: .gitignore  BUILD.gn  NOTICE  OAT.xml  README.md  README_zh.md  ohos.build
sdk_liteos/: config.gni
sdk_liteos/board/: Makefile  board.c  target_config.h
sdk_liteos/board/include/: platform_config.h
sdk_liteos/board/include/asm/: hal_platform_ints.h
sdk_liteos/config/: hdf.hcs
sdk_liteos/config/board/: target_config.h
sdk_liteos/config/board/include/: board.h
sdk_liteos/config/board/include/asm/: platform.h
sdk_liteos/config/device_info/: device_info.hcs
sdk_liteos/config/sdio/: sdio_config.hcs
sdk_liteos/config/spi/: spi_config.hcs
sdk_liteos/mpp/: BUILD.gn
sdk_liteos/mpp/module_init/: BUILD.gn
sdk_liteos/mpp/module_init/src/: system_init.c
sdk_liteos/uboot/: Makefile
sdk_liteos/uboot/secureboot_release/: Makefile  aeskey2reg.c  create_secure_boot.sh  hash_modify.c
sdk_liteos/uboot/secureboot_release/ddr_init/: Makefile
sdk_liteos/uboot/secureboot_release/ddr_init/boot/: init_regs.c
sdk_liteos/uboot/secureboot_release/ddr_init/boot/hi3518ev300/: lowlevel_init_v300.c
sdk_liteos/uboot/secureboot_release/ddr_init/drv/: ddr_ddrt_t16.h  ddr_ddrt_v2_0_shf0.h  ddr_ddrt_v2_0_shf1.h  ddr_ddrt_v2_0_shf2.h  ddr_interface.h  ddr_phy_s40.h  ddr_phy_t12_v100.h  ddr_phy_t12_v101.h  ddr_phy_t16.h  ddr_phy_t28.h  ddr_training_boot.c  ddr_training_console.c  ddr_training_ctl.c  ddr_training_custom.c  ddr_training_custom.h  ddr_training_impl.c  ddr_training_impl.h  ddr_training_internal_config.h
